css/style.css
:root {
  --wattsdown-green: #00897B;
  --wattsdown-dark-green: #075E55;
  --wattsdown-darker-green: #054C44;
  --wattsdown-blackish-green: #022520;
  --wattsdown-light-alge: #E1FFC7;
  --wattsdown-beige: #DCD6C8;
  --wattsdown-charcol: #333A40;
  --wattsdown-charcol-dark: #273238;
  --wattsdown-white: #EEEEEE;
}

html,
body {
  width: 100vw;
}

body {
  margin: 0;
  font-family: 'Orbitron', sans-serif;
  background-color: #26C0A7;
  color: var(--wattsdown-blackish-green);
  font-family: Helvetica, Arial, sans-serif;
}

header {
  width: 100vw;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: var(--wattsdown-darker-green);
  /*! border: solid; */
}

a {
  text-decoration: none;
}

.logo {
  display: flex;
}

#header-img {
  /* border: solid; */
}

#nav-bar {
  width: 100%;
}

/* .icon {
  margin: 0;
  font-size: 8rem;
} */

/* .header-title {
  font-family: 'Audiowide', cursive;
} */

#menu {
  margin: 0;
  /*! width: 100%; */
  display: flex;
  padding-left: 0;
  list-style-type: none;
  flex-direction: column;
  justify-content: flex-end;
}

.nav-link {
  width: 100%;
  display: block;
  padding: .5rem 0;
  text-align: center;
  margin-bottom: 2px;
  font-weight: bold;
  box-sizing: border-box;
  color: var(--wattsdown-white);
  background-color: var(--wattsdown-dark-green);
}

.nav-link:hover {
  background-color: var(--wattsdown-green);
}

.container {
  display: flex;
  align-items: center;
  flex-direction: column;
  /*! border: solid; */
                            /* color: #d5d1c5; <<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
  background-color: #ded8cc;
  background-image: url('../images/skulls.png');
  background-repeat: repeat;
}

.banner {
  margin: 0;
  line-height: 75px;
  font-family: 'Orbitron', sans-serif;
}

.banner--upper {
  font-size: 4rem;
  margin-top: 1rem;
}

.banner--lower {
  font-size: 4.8rem;
}

.sub-banner {
  font-size: 2rem;
  /*  font-family: 'Great Vibes', cursive; */
  font-family: 'PT Sans', sans-serif;
}

form {
  width: 100%;
  margin: 0 auto;
  max-width: 300px;
}

input[type="email"],
input[type="submit"] {
  width: 100%;
  height: 55px;
  display: block;
  font-weight: bold;
  box-sizing: border-box;
}

.btn {
  margin-top: 1rem;
  font-weight: bold;
  background-color: var(--wattsdown-light-alge);
  border: 2px solid #212121;
}

#submit {
  /* text-transform: uppercase; */
}

.features-container {
  /*! padding: 2rem 0; */
  /*! border: solid; */
  margin: 1rem 0;
}

.features-title {
  font-size: 2rem;
}

.features {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

.fas {
  font-size: 5rem;
}

.video-container {
  padding: 0;
  /*! border: solid; */
}

#pricing {
  width: 100%;
  display: flex;
  margin: 2rem auto;
  align-items: center;
  justify-content: center;
  flex-flow: column wrap;
  /*! border: solid; */
}

.tile {
  width: 300px;
  height: 400px;
  padding: 1.5rem;
  box-sizing: border-box;
  margin-bottom: .5rem;
  border: 1px solid #000;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-image: linear-gradient(#075E54, #075E54 17%, var(--wattsdown-light-alge) 17%, var(--wattsdown-light-alge) 17%);
}

.tile-title {
  margin: 0;
  /* padding: 1em; */
  text-align: center;
  color: #e7f4f1;
  font-size: 1.5rem;
  text-shadow: 2.5px 2.5px .25px #075E54;
}

.tile-buy-btn {
  border: 0;
  width: 100%;
  padding: 1rem;
  margin: 0 auto;
  font-weight: bold;
  color: hsl(120, 28%, 90%);
  text-transform: uppercase;
  background-color: hsl(8, 88%, 44%);
}

.price {
  line-height: .9;
  display: flex;
  color: hsl(114, 94%, 6%);
  align-items: center;
  justify-content: center;
}

.price-currency {
  font-size: 2.2rem;
}

.price-dollar {
  font-size: 4rem;
}

.price-cents {
  font-size: 1.1rem;
  align-self: flex-start;
}

footer {
  height: 200px;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  justify-content: center;
  color: var(--wattsdown-white);
  background-color: var(--wattsdown-charcol-dark);
  /*! border: solid; */
}

.footer-menu {
  margin: 0;
  display: flex;
  padding-left: 0;
  flex-direction: row;
  list-style-type: none;
  justify-content: right;
}

.footer-list-item {
  /* text-align: center; */
  padding: .5rem 1rem;
  font-weight: bold;
}

footer a {
  color: #FFFFFF;
}

.footer-text {
  color: #AAAAAA;
  text-align: right;
  margin: 8px 16px;
}

.footer-text a {
  color: #AAAAAA;
}

.centered {
  text-align: center;
}

/* @media (min-width: 400px) {

} */

@media (min-width: 650px) {
  header {
    flex-direction: row;
    justify-content: space-between;
  }
  #menu {
    flex-direction: row;
  }
  #nav-bar {
    max-width: 300px;
  }
  #menu li {
    margin-left: 2px;
  }
  .nav-link {
    padding: .5rem .75rem;
  }
  .banner {
    font-size: 5rem;
    line-height: 80px;
  }
  .two {
    font-size: 5.8rem;
  }
}

@media (min-width: 900px) {
  #pricing {
    max-width: 1175px;
    flex-flow: row wrap;
    justify-content: space-around;
    padding: 3em 0;
  }
  form {
    max-width: 400px;
  }
}

@media (min-width: 1075px) {
  .tile {
    margin-bottom: 0;
  }
  footer {
    padding-right: 2rem;
  }
}

